2005-11-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 

	* gnu/testlet/javax/swing/JTextField/CopyPaste.java:
	New test.

2005-11-08  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JLayeredPane/getComponentsInLayer.java:
	New test.

2005-11-08  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/java/awt/Component/invalidate.java
	(testInvalidateInvalidComponent): New test.

2005-11-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/constructors.java
	(testConstructor1): Added new checks.

2005-11-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxUI/createArrowButton.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxUI/getDisplaySize.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxUI/getMinimumSize.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxUI/getPreferredSize.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxUI/MyMetalComboBoxUI.java: 
	New support class.

2005-11-07  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/lang/String/decode.java: Added new tests
	for UTF-16 encodings.

2005-11-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/createArrowButton.java
	(test): set look and feel and added new checks,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/createEditor.java
	(test): added new checks,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/getDisplaySize.java
	New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/getMinimumSize.java
	(test): Use MyBasicComboBoxUI,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/getPreferredSize.java
	(test): Move code to new method testNonEditable(), replace with calls 
	to new test methods,
	(testNonEditable): New method,
	(testEditable): New method,