@@ -1,3 +1,9 @@
+2005-11-08  Roman Kennke  <kennke@aicas.com>
+
+	* gnu/testlet/java/awt/Container/getAlignmentX.java: New test.
+	* gnu/testlet/java/awt/Container/getAlignmentY.java: New test.
+	* gnu/testlet/java/awt/Container/TestLayout: New auxiliary class.
+
 2005-11-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 
 
 	* gnu/testlet/javax/swing/JTextField/CopyPaste.java:
